cabal-version:      2.4
name:               comprog-hs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  BFS,
                      BinarySearch,
                      Enumeration,
                      Geom,
                      IdempotentSemigroup,
                      Interval,
                      NumberTheory,
                      Perm,
                      Queue,
                      ScannerBS,
                      Scanner,
                      SegTree,
                      Sieve,
                      Slice,
                      SparseTable,
                      SqrtTree,
                      Stack,
                      Tree,
                      Util

    build-depends:    base,
                      containers,
                      hashable,
                      unordered-containers,
                      array,
                      mtl,
                      bytestring

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
